<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Pedometer Alarm</string>
    <string name="alarm">alarm</string>
    <string name="time">time</string>
    <string name="default_time">18:00</string>
    <string name="goal">goal</string>
    <string name="default_goal">10000</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="alarm_on">Alarm On</string>
    <string name="alarm_off">Alarm Off</string>
    <string name="popup">Pedometer Alarm</string>
    <string name="popup_text">Time to go for a walk!</string>


</resources>
